114. Breaking our CNN model down part 4: Building a baseline CNN model

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_convolutional_neural_network_in_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyORF7RlssL6wD2a/wrFrn0t",
+      "authorship_tag": "ABX9TyMG6yL2tao62W3Hj99Ew+NY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1282,7 +1282,7 @@
         "## Binary Classificaiton. Let's break it down\n",
         "\n",
         "1. Become one with the data(visualize, visualize, visualize)\n",
-        "2. Preprocess the data(prepared it for our model, the main step here was scaling/normalizing)\n",
+        "2. Preprocess the data(prepared it for our model, the main step here was scaling/normalizing & turning our data into batches)\n",
         "3. Created a model(start with a baseline)\n",
         "4. Fit the model\n",
         "5. Evaluate the model\n",
@@ -1438,11 +1438,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bqqIMEw51jSt",
-        "outputId": "f59a8c35-1a96-465d-b3e8-5e2940826d07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bqqIMEw51jSt",
+        "outputId": "f59a8c35-1a96-465d-b3e8-5e2940826d07"
       },
       "source": [
         "# Get a sample of a train data batch\n",
@@ -1468,11 +1468,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7hnQXrUtzxJG",
-        "outputId": "885734f8-b502-4759-a991-5705c738b367",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7hnQXrUtzxJG",
+        "outputId": "885734f8-b502-4759-a991-5705c738b367"
       },
       "source": [
         "# How many batches are there\n",
@@ -1497,11 +1497,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1myDZjpV2RFS",
-        "outputId": "ec5df7a1-1d1b-4b63-803f-963160109c5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1myDZjpV2RFS",
+        "outputId": "ec5df7a1-1d1b-4b63-803f-963160109c5e"
       },
       "source": [
         "len(test_data), 500/32"
@@ -1525,11 +1525,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_k0UPDv52axq",
-        "outputId": "a4c8bc5b-bc19-4aea-ad0d-988b05e87578",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_k0UPDv52axq",
+        "outputId": "a4c8bc5b-bc19-4aea-ad0d-988b05e87578"
       },
       "source": [
         "# Get the first 2 images\n",
@@ -1654,11 +1654,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uoqupiab2lwI",
-        "outputId": "13d36ac1-193c-4e91-f970-c9eb5972fe70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Uoqupiab2lwI",
+        "outputId": "13d36ac1-193c-4e91-f970-c9eb5972fe70"
       },
       "source": [
         "images[7], images[7].shape"
@@ -1730,11 +1730,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rg9-HZiq2ycW",
-        "outputId": "48192b1b-e7a0-4da4-a399-709058f6018a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rg9-HZiq2ycW",
+        "outputId": "48192b1b-e7a0-4da4-a399-709058f6018a"
       },
       "source": [
         "# view the first batch of labels\n",
@@ -1759,14 +1759,55 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "sIjWwXyT29dR"
       },
       "source": [
-        ""
+        "### 3. Create a CNN model ( start with a baseline)\n",
+        "\n",
+        "* A baseline is a relative simple model or existing result that you setup when begining a machine learning experiment and then as you keep experimenting, you try to beat the baseline.\n",
+        "\n",
+        "\n",
+        "> **Note** : In deep learning, there is almost an infinite amount of architecture you could create. So one of the best ways to get started is to start with something simple and see if it works on your data and then introduce complexity as required(e.g. look at which current model is performing best in the field for your problem)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rg4ayhwZ3aZE"
+      },
+      "source": [
+        "# Make the creating  our model a little easier\n",
+        "\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D, Activation\n",
+        "from tensorflow.keras import Sequential\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PlPzRiTFIrW0"
+      },
+      "source": [
+        "# Create the model (this will be our baseline, a layer convolutional neural network)\n",
+        "model_4 = Sequential([\n",
+        "    Conv2D(filters = 10,\n",
+        "           kernel_size=3,\n",
+        "           strides=1,\n",
+        "           padding=\"valid\",\n",
+        "           activation=\"relu\",\n",
+        "           input_shape=(224, 224, 3))  # input layer (specify input shape)\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    Conv2D(10, 3, ativation=\"relu\"),\n",
+        "    Flatten(),\n",
+        "    Dense(1, activation=\"sigmoid\") # output layer(working with binary classificaion so  only 1 output)\n",
+        "])"
+      ],
+      "execution_count": 3,
       "outputs": []
     }
   ]
