115. Breaking our CNN model down part 5: Looking inside a Conv2D layer

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03_convolutional_neural_network_in_tensorflow",
       "provenance": [],
-      "authorship_tag": "ABX9TyMG6yL2tao62W3Hj99Ew+NY",
+      "authorship_tag": "ABX9TyMCC9CmCt3IcrQ+ifJnK5Lw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1795,10 +1795,10 @@
       "source": [
         "# Create the model (this will be our baseline, a layer convolutional neural network)\n",
         "model_4 = Sequential([\n",
-        "    Conv2D(filters = 10,\n",
-        "           kernel_size=3,\n",
-        "           strides=1,\n",
-        "           padding=\"valid\",\n",
+        "    Conv2D(filters = 10, # Number of sliding windows going across an input (higher=more complex model)\n",
+        "           kernel_size=(3, 3), # size of the sliding window going across an input\n",
+        "           strides=1, # the size of the step the sliding window takes across an input\n",
+        "           padding=\"valid\", # if \"same\", output is same as input shape, if \"valid\" - output shape gets compressed\n",
         "           activation=\"relu\",\n",
         "           input_shape=(224, 224, 3))  # input layer (specify input shape)\n",
         "    Conv2D(10, 3, activation=\"relu\"),\n",
@@ -1808,6 +1808,17 @@
         "])"
       ],
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QJO02cLRO3H2"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
