--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -2789,7 +2789,7 @@
         "id": "qgteYLS4l6e9"
       },
       "source": [
-        "## Making a prediction with our trained model on our own custom data"
+        "### Making a prediction with our trained model on our own custom data"
       ]
     },
     {
@@ -3068,11 +3068,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ViPp9NeDgvNp",
-        "outputId": "4eb6069e-b146-4a8f-8640-126bcffbd5ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ViPp9NeDgvNp",
+        "outputId": "4eb6069e-b146-4a8f-8640-126bcffbd5ea"
       },
       "source": [
         "# Remind ourselves of our class names\n",
@@ -3097,12 +3097,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "onsgZhbtgzkf",
-        "outputId": "a57706c2-4626-4257-fd9e-b03fb57396d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "onsgZhbtgzkf",
+        "outputId": "a57706c2-4626-4257-fd9e-b03fb57396d5"
       },
       "source": [
         "# We can index the predicted class by rounding the prediction probability and indexing it on the class names\n",
@@ -3163,12 +3163,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DsMP03L2iBPg",
-        "outputId": "2d4d5255-30ac-4c5f-9497-5634d5800912",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 264
-        }
+        },
+        "id": "DsMP03L2iBPg",
+        "outputId": "2d4d5255-30ac-4c5f-9497-5634d5800912"
       },
       "source": [
         "# Test our model on custom image\n",
@@ -3203,12 +3203,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s57XrtGjiMEe",
-        "outputId": "925ccd59-8ee6-4921-add5-0024d3745106",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 471
-        }
+        },
+        "id": "s57XrtGjiMEe",
+        "outputId": "925ccd59-8ee6-4921-add5-0024d3745106"
       },
       "source": [
         "# Download another test custom image and make a prediction on it\n",
@@ -3250,12 +3250,68 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "aPR6QZ8Oivk7"
+        "id": "xmJC28OdkPXY"
       },
       "source": [
-        "### Making a multi-class classification "
+        "## Multi-class Image Classification\n",
+        "\n",
+        "We've just been through a bunch of the following steps with a binary classificatioon problem (pizza vs steak), now we're going to step things up a notch with 10 classes of food(multi-class classification).\n",
+        "\n",
+        "1. Become one with the data\n",
+        "2. Preprocess the data ( get it ready for a model)\n",
+        "3. Create a model(start with a baseline)\n",
+        "4. Fit the model (overfit it to make sure it works)\n",
+        "5. Evaluate the model\n",
+        "6. Adjust different hyperparameters and improve the model (try to beat baseline/reduce overfitting)\n",
+        "7. Repeat until satisfied"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v2iJqzHalWO0"
+      },
+      "source": [
+        "### 1. Import and become one with the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lWVWKm-iklK6"
+      },
+      "source": [
+        "import zipfile\n",
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_all_data.zip\n",
+        "\n",
+        "# Unzip our data\n",
+        "zip_ref =  zipfile.ZipFile(\"10_food_classes_all_data.zip\", \"r\")\n",
+        "zip_ref.extractall()\n",
+        "zip_ref.close()\n"
+      ],
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7EjRWQWcmWWc"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R9OBd5aVmA5c"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
