129. Multi-class CNN's part 3: Building a multi-class CNN model

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -3281,10 +3281,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lWVWKm-iklK6",
-        "outputId": "6cd4a8ed-8504-4a3e-9d23-5d59e8fd8476",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6cd4a8ed-8504-4a3e-9d23-5d59e8fd8476"
       },
       "source": [
         "import zipfile\n",
@@ -3320,10 +3320,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7EjRWQWcmWWc",
-        "outputId": "6f923fcb-1e51-4aa0-b07b-9c85618a6a29",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f923fcb-1e51-4aa0-b07b-9c85618a6a29"
       },
       "source": [
         "import os\n",
@@ -3381,11 +3381,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jz1TbHDqkyH0",
-        "outputId": "28c0f2ab-7a28-480e-9553-9ccfa18d9509",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jz1TbHDqkyH0",
+        "outputId": "28c0f2ab-7a28-480e-9553-9ccfa18d9509"
       },
       "source": [
         "# Let's get the class name\n",
@@ -3410,12 +3410,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "msKH0c8Mkrdc",
-        "outputId": "36b4e111-205f-440e-c43d-d494ca4e87be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "id": "msKH0c8Mkrdc",
+        "outputId": "36b4e111-205f-440e-c43d-d494ca4e87be"
       },
       "source": [
         "# Visualize , visualize, visualize\n",
@@ -3449,12 +3449,190 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "PZQPE1pUlilU"
       },
       "source": [
-        ""
+        "### 2. Preprocess the data (prepare it for a model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kaanW_kAmKvz"
+      },
+      "source": [
+        "# Create train and test data generator and preprocess the image data\n",
+        "\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)"
+      ],
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LnwHxZm1meNn"
+      },
+      "source": [
+        "train_data = train_datagen.flow_from_directory(directory=train_dir, \n",
+        "                                               target_size=(224, 224),\n",
+        "                                               class_mode=\"\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bmNVD03OmJYH",
+        "outputId": "24645b6f-6424-4796-f6f9-c0d517404a2a"
+      },
+      "source": [
+        "# Load in our image data from directories and turn them into batches\n",
+        "train_data = train_datagen.flow_from_directory(directory=train_dir,   # Target directory of images  \n",
+        "                                               target_size=(224, 224), # Target size of images(height, width)\n",
+        "                                               class_mode=\"categorical\", # type of data you're workng with                                              \n",
+        "                                               batch_size=32,\n",
+        "\n",
+        "                                               ) # size of mini batches to load data into\n",
+        "\n",
+        "test_data = test_datagen.flow_from_directory(directory=test_dir, \n",
+        "                                             target_size=(224, 224),\n",
+        "                                             class_mode=\"categorical\",\n",
+        "                                             batch_size=32)\n"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 7500 images belonging to 10 classes.\n",
+            "Found 2500 images belonging to 10 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M5bxZYX1okGw",
+        "outputId": "a73b543c-8265-4ddf-ea99-b6092e1dd951",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(train_data), len(test_data)"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(235, 79)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mllyiZqIonjf",
+        "outputId": "49ba0941-3a81-46ea-a132-3a8f213a1855",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "(750 * 10 / 32), (250 * 10 / 32)"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(234.375, 78.125)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h4PIcgZfovGX"
+      },
+      "source": [
+        "### 3. Create a model (start with a baseline)\n",
+        "\n",
+        "We've been talking a lot about the CNN Explainer website...\n",
+        "how about we just take their model (also on 10 classes ) and use it for our problem."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RFAhZzPmqjwi"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPool2D, Flatten, Dense, Activation"
+      ],
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bc1cipYApFCD"
+      },
+      "source": [
+        "# Create the model (very similar to previous models but actually the same as CNN explainer model)\n",
+        "model_8 = Sequential([\n",
+        "    Conv2D(filters=10, \n",
+        "           kernel_size=3, \n",
+        "           Activation(activation=\"relu\"),\n",
+        "           input_shape=(224, 224, 3)\n",
+        "           ),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    MaxPool2D(pool_size=2),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    Conv2D(10, 3, activation=\"relu\"),\n",
+        "    MaxPool2D(),\n",
+        "    Flatten(),\n",
+        "    Dense(10, activation=\"softmax\")  # Changed to have 10 output neurons and use the softmax activation function                         \n",
+        "])\n",
+        "\n",
+        "# Compile the model\n",
+        "model_8.compile(loss=\"categorical_crossentropy\", \n",
+        "                optimizer = tf.keras.optimizers.Adam(), \n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# Fit the model\n",
+        "model_8.fit()\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
