--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -3524,11 +3524,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M5bxZYX1okGw",
-        "outputId": "a73b543c-8265-4ddf-ea99-b6092e1dd951",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M5bxZYX1okGw",
+        "outputId": "a73b543c-8265-4ddf-ea99-b6092e1dd951"
       },
       "source": [
         "len(train_data), len(test_data)"
@@ -3552,11 +3552,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mllyiZqIonjf",
-        "outputId": "49ba0941-3a81-46ea-a132-3a8f213a1855",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mllyiZqIonjf",
+        "outputId": "49ba0941-3a81-46ea-a132-3a8f213a1855"
       },
       "source": [
         "(750 * 10 / 32), (250 * 10 / 32)"
@@ -3599,7 +3599,7 @@
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Conv2D, MaxPool2D, Flatten, Dense, Activation"
       ],
-      "execution_count": 88,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -3612,9 +3612,8 @@
         "model_8 = Sequential([\n",
         "    Conv2D(filters=10, \n",
         "           kernel_size=3, \n",
-        "           Activation(activation=\"relu\"),\n",
-        "           input_shape=(224, 224, 3)\n",
-        "           ),\n",
+        "           input_shape=(224, 224, 3)),\n",
+        "    Activation(activation=\"relu\"),\n",
         "    Conv2D(10, 3, activation=\"relu\"),\n",
         "    MaxPool2D(pool_size=2),\n",
         "    Conv2D(10, 3, activation=\"relu\"),\n",
@@ -3629,10 +3628,63 @@
         "                optimizer = tf.keras.optimizers.Adam(), \n",
         "                metrics=[\"accuracy\"])\n",
         "\n",
-        "# Fit the model\n",
-        "model_8.fit()\n",
-        "\n",
         "\n"
+      ],
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wTJg9CLYtB74"
+      },
+      "source": [
+        "### 4. Fit a model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n09cpeDFsSns",
+        "outputId": "9e2626e8-1ce8-45dc-9130-d49b5694cc68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "### Fit the model\n",
+        "\n",
+        "history_8 = model_8.fit(train_data, # now 10 different classes\n",
+        "            epochs=5,\n",
+        "            steps_per_epoch=len(train_data),\n",
+        "            validation_data=test_data, \n",
+        "            validation_steps=len(test_data))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "235/235 [==============================] - 45s 189ms/step - loss: 2.1133 - accuracy: 0.2272 - val_loss: 1.9876 - val_accuracy: 0.2984\n",
+            "Epoch 2/5\n",
+            "235/235 [==============================] - 44s 187ms/step - loss: 1.8897 - accuracy: 0.3387 - val_loss: 1.8147 - val_accuracy: 0.3680\n",
+            "Epoch 3/5\n",
+            "235/235 [==============================] - 44s 188ms/step - loss: 1.6453 - accuracy: 0.4483 - val_loss: 1.8513 - val_accuracy: 0.3620\n",
+            "Epoch 4/5\n",
+            "235/235 [==============================] - ETA: 0s - loss: 1.2892 - accuracy: 0.5747"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0LvH6cootdrS"
+      },
+      "source": [
+        "len(train_data)"
       ],
       "execution_count": null,
       "outputs": []
