134. Multi-class CNN's part 8: Things you could do to improve your CNN model

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -3969,11 +3969,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I-NoYZH-eb92",
-        "outputId": "c0da5e57-22fb-4d79-ae2a-733715325944",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I-NoYZH-eb92",
+        "outputId": "c0da5e57-22fb-4d79-ae2a-733715325944"
       },
       "source": [
         "# Create ImageDataGenerator training instance with data augmentation\n",
@@ -4021,11 +4021,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgjNRmiohCpc",
-        "outputId": "ad6ac0af-8428-47c0-9a4a-01a9a53fc94f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qgjNRmiohCpc",
+        "outputId": "f73433be-1f5a-4972-b0a8-5394c4d050db"
       },
       "source": [
         "# Fit the augmented model\n",
@@ -4041,13 +4041,9 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "235/235 [==============================] - 108s 460ms/step - loss: 2.2215 - accuracy: 0.1635 - val_loss: 2.1202 - val_accuracy: 0.2092\n",
+            "235/235 [==============================] - 108s 458ms/step - loss: 1.9023 - accuracy: 0.3427 - val_loss: 1.7183 - val_accuracy: 0.4088\n",
             "Epoch 2/5\n",
-            "235/235 [==============================] - 108s 459ms/step - loss: 2.0901 - accuracy: 0.2477 - val_loss: 1.9391 - val_accuracy: 0.3168\n",
-            "Epoch 3/5\n",
-            "235/235 [==============================] - 108s 459ms/step - loss: 2.0254 - accuracy: 0.2791 - val_loss: 1.8967 - val_accuracy: 0.3464\n",
-            "Epoch 4/5\n",
-            "189/235 [=======================>......] - ETA: 19s - loss: 1.9776 - accuracy: 0.3062"
+            "235/235 [==============================] - ETA: 0s - loss: 1.8664 - accuracy: 0.3600"
           ],
           "name": "stdout"
         }
@@ -4056,24 +4052,72 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z8MLVaYiiFRm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z8MLVaYiiFRm",
+        "outputId": "c34cf16f-3f81-4c0e-9046-2df00e4df5a2"
       },
       "source": [
         "model_8.evaluate(test_data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "79/79 [==============================] - 10s 132ms/step - loss: 2.9475 - accuracy: 0.2940\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2.9475162029266357, 0.2939999997615814]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WvAKOKOViIOq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WvAKOKOViIOq",
+        "outputId": "5256d300-1d25-48ff-a924-a7f67a6fdf2c"
       },
       "source": [
         "model_10.evaluate(test_data)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "79/79 [==============================] - 10s 131ms/step - loss: 1.7859 - accuracy: 0.3732\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.7858978509902954, 0.373199999332428]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4094,6 +4138,35 @@
       },
       "source": [
         "Woah ! That looks much better, the loss curves are much closer to each other than the baseline model and they look like they're heading in the right direction(certainly not the wrong direction). So, if we were to train for longer, we might see further improvements."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mJOfjCljjOve"
+      },
+      "source": [
+        "### 7. Repeat until satisfied\n",
+        "\n",
+        "We could keep going here.. continually trying to bring our loss curves closer together and trying to improve the validation/test accuracy.\n",
+        "\n",
+        "How?\n",
+        "\n",
+        "By running lots of experiments namely:\n",
+        "- restructuring our model's architecture (increasing layers/hidden units)\n",
+        "-  adjust the learning rate\n",
+        "- try different methods of data augmentation (adjust the hyperparameters in our ImageDataGenerator instance)\n",
+        "- training for longer (e.g. running for 10 epochs instead of 5)\n",
+        "- try **transfer learning**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zHVMD1pyk0z4"
+      },
+      "source": [
+        "### Make a prediction with our trained model"
       ]
     }
   ]
