136. Saving and loading our trained CNN model

--- a/03_convolutional_neural_network_in_tensorflow.ipynb
+++ b/03_convolutional_neural_network_in_tensorflow.ipynb
@@ -4312,11 +4312,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2wUP-_fInz0P",
-        "outputId": "273103d1-69cf-44eb-c0a1-f13775fa1793",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2wUP-_fInz0P",
+        "outputId": "273103d1-69cf-44eb-c0a1-f13775fa1793"
       },
       "source": [
         "class_names"
@@ -4405,6 +4405,121 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6w4wS2wRqKKk"
+      },
+      "source": [
+        "Looks like our mdoel didn't perform very well on our custom images but this is because it only achieved ~39% accuracy on the test data. So we can expect it to function quite poorly on unseen data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8AON4wZPqhUP"
+      },
+      "source": [
+        "## Saving and loading our model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ko-pjssnqsBQ",
+        "outputId": "e16d6064-1bf1-428e-8a33-89ee9b9024b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Save a model\n",
+        "model_10.save(\"saved_trained_model_10\")"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: saved_trained_model_10/assets\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OrvY5aQOrHrg",
+        "outputId": "3b982354-d419-4ed2-8729-92a992e01cd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Load in a trained model and evaluate it\n",
+        "loaded_model_10 = tf.keras.models.load_model(\"saved_trained_model_10\")\n",
+        "loaded_model_10.evaluate(test_data)"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "79/79 [==============================] - 11s 135ms/step - loss: 1.8130 - accuracy: 0.3900\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.8130295276641846, 0.38999998569488525]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ZEdRTg_rWiR",
+        "outputId": "14a3443e-864c-40be-ab47-c10ae9d5440e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Compare loaded vs existing moddel\n",
+        "model_10.evaluate(test_data)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "79/79 [==============================] - 10s 132ms/step - loss: 1.8130 - accuracy: 0.3900\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.8130295276641846, 0.38999998569488525]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
         }
       ]
     }
