--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
+      "authorship_tag": "ABX9TyN1N14rMcyqAum8ZneXvKMz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,119 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "# Transfer Learning With TensorFlow Part 1: Feature Extraction\n",
+        "\n",
+        "Transfer learning is leveraging a working model's existing architecture and learned patterns for our own problem.\n",
+        "\n",
+        "There are 2 main benefits :\n",
+        "1. Can leverage an existing neural network architecture proven to work on problems similar to our own.\n",
+        "2. Can leverage a working neural network architecture which has already learned patterns on similar data to our own, then we can adapt those patterns to our own data."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YiA99SJeMTgT",
+        "outputId": "d9e8307c-1e4e-467d-875e-b0e748d94448",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Are we using a GPU?\n",
+        "!nvidia-smi"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Wed Jul  7 23:01:27 2021       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 470.42.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   48C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LYc6mAweNIXr"
+      },
+      "source": [
+        "## Downloading and becoming one with the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yUP2rR88NUza",
+        "outputId": "1939e054-51f5-43b5-d563-50e4d81c4853",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get data(10% of food classes from Food101)\n",
+        "import zipfile\n",
+        "\n",
+        "#Download the data\n",
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+        "\n",
+        "# Unzip the downloaded file\n",
+        "zip_ref = zipfile.ZipFile(\"10_food_classes_10_percent.zip\")\n",
+        "zip_ref.extractall()\n",
+        "zip_ref.close()\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-07 23:04:56--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 172.217.164.176, 172.217.2.112, 172.253.62.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|172.217.164.176|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 168546183 (161M) [application/zip]\n",
+            "Saving to: ‘10_food_classes_10_percent.zip.1’\n",
+            "\n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   233MB/s    in 0.7s    \n",
+            "\n",
+            "2021-07-07 23:04:56 (233 MB/s) - ‘10_food_classes_10_percent.zip.1’ saved [168546183/168546183]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tXY2RrNbN6AS"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
