--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKjfsEeAlZDLmFuiV0WPhb",
+      "authorship_tag": "ABX9TyORmSEeIJ1yoeVm6YKi6AhK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0cb94211-7ce6-4f88-d061-443d73661b1b"
+        "outputId": "e4446e8e-977f-4424-d052-cf6e5f64ba96"
       },
       "source": [
         "# Are we using a GPU?\n",
@@ -61,7 +61,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Fri Jul  9 15:20:14 2021       \n",
+            "Fri Jul  9 19:03:48 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 470.42.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -70,7 +70,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   59C    P8    11W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   54C    P8    10W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -102,7 +102,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25cc5e7b-c8e4-4521-fe4a-e1fe23c44f07"
+        "outputId": "ca79c51c-f1f1-4cb3-da11-96e406edb479"
       },
       "source": [
         "# Get data(10% of food classes from Food101) https://www.kaggle.com/dansbecker/food-101\n",
@@ -121,16 +121,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2021-07-09 15:20:14--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 172.253.122.128, 172.253.63.128, 142.250.31.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|172.253.122.128|:443... connected.\n",
+            "--2021-07-09 19:03:48--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.195.128, 172.253.117.128, 74.125.142.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.195.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   162MB/s    in 1.0s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   179MB/s    in 0.9s    \n",
             "\n",
-            "2021-07-09 15:20:15 (162 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2021-07-09 19:03:49 (179 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ],
           "name": "stdout"
@@ -141,10 +141,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tXY2RrNbN6AS",
-        "outputId": "7c1c1aa6-51c7-40d8-ee8f-0fd698d4025c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd7a6c74-af0d-496b-93b7-0a73e123b3d1"
       },
       "source": [
         "# How many images in each folder\n",
@@ -154,34 +154,34 @@
         "for dirpath, dirnames, filenames in os.walk(\"10_food_classes_10_percent\") :\n",
         "  print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.'\")"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "There are 2 directories and 0 images in '10_food_classes_10_percent'.'\n",
-            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.'\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.'\n",
             "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.'\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.'\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.'\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.'\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.'\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.'\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.'\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.'\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.'\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.'\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.'\n"
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.'\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.'\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.'\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.'\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.'\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.'\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.'\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.'\n"
           ],
           "name": "stdout"
         }
@@ -200,11 +200,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GBIAJU-i8eIt",
-        "outputId": "bbf1a05d-76f4-4603-b954-a248742e0b32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GBIAJU-i8eIt",
+        "outputId": "e5b6fe0b-8f3f-42d5-ed8a-6cdbdc307549"
       },
       "source": [
         "# Setup data inputs\n",
@@ -233,7 +233,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,16 +250,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AWMEnZ859nmm",
-        "outputId": "144663eb-5e12-4f91-cd73-60078a811c30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AWMEnZ859nmm",
+        "outputId": "382734a5-6563-4dc0-efbd-8037a684a847"
       },
       "source": [
         "len(train_data_10_percent), len(test_data)"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,9 +271,53 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MUTeYdAd93zW"
+      },
+      "source": [
+        "## Setting up callbacks (things to run whilst our model trains)\n",
+        "\n",
+        "Callbacks are extra functionality you can add to your models to be performed during or after training. Some of the most popular callbacks :\n",
+        "* Tracking experiments with the TensorBoard callback\n",
+        "* Model checkpoint with the ModelCheckpoint callback\n",
+        "* Stopping a model from training( before it trains too long and overfits) with the EarlyStopping callback"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oH_LmB8m-WYl"
+      },
+      "source": [
+        "# Create TensorBoard callback (functionized becaused we need to create a new one for each model)\n",
+        "\n",
+        "import datetime\n",
+        "\n",
+        "def create_tensorboard_callback(dir_name, experiment_name) :\n",
+        "  log_dir = dir_name + \"/\" + experiment_name + \"/\" + datetime.datetime.now().strftime(\"%Y&m&d-%H%M%S\")\n",
+        "  tensorboard_callback = tf.keras.callback.TensorBoard(log_dir=log_dir)\n",
+        "  print(f\"Saving TensorBoard log file to: {log_dir}\")\n",
+        "  return tensorboard_callback"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cmMvFp8wsbID"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
