--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyORmSEeIJ1yoeVm6YKi6AhK",
+      "authorship_tag": "ABX9TyNUFGZJjsg99op3t6mhIOou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,12 +309,43 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "cmMvFp8wsbID"
       },
       "source": [
+        "## Creating Models using TensorFlow Hub\n",
+        "\n",
+        "In the past we'v e used TensorFlow to create our own models layer by layer from scratch.\n",
+        "\n",
+        "Now we're going to do a similar process, except the majority of our model's layers are going to come from TensorFlow Hub.\n",
+        "We can access pre-trained models on [https://www.tensorflow.org/hub](https://www.tensorflow.org/hub)\n",
+        "\n",
+        "\n",
+        "Research paper on which architecture is performing well on different classfication models\n",
+        "[https://paperswithcode.com](https://paperswithcode.com/)\n",
+        "\n",
+        "https://paperswithcode.com/task/image-classification\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P0pkLqulxujU"
+      },
+      "source": [
         ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uz76mHMts6-I"
+      },
+      "source": [
+        "import tensorflow_hub as hub\n"
       ],
       "execution_count": null,
       "outputs": []
