--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUFGZJjsg99op3t6mhIOou",
+      "authorship_tag": "ABX9TyNu04tq7vRcH0wCkF79j2ty",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e4446e8e-977f-4424-d052-cf6e5f64ba96"
+        "outputId": "fdce4f5d-2d08-4590-ab79-160285033b26"
       },
       "source": [
         "# Are we using a GPU?\n",
@@ -61,7 +61,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Fri Jul  9 19:03:48 2021       \n",
+            "Mon Jul 12 00:08:22 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 470.42.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -70,7 +70,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   54C    P8    10W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   64C    P8    11W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -102,7 +102,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca79c51c-f1f1-4cb3-da11-96e406edb479"
+        "outputId": "017306d4-2bc4-4336-bf07-ce42ad113d1d"
       },
       "source": [
         "# Get data(10% of food classes from Food101) https://www.kaggle.com/dansbecker/food-101\n",
@@ -121,16 +121,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2021-07-09 19:03:48--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.195.128, 172.253.117.128, 74.125.142.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.195.128|:443... connected.\n",
+            "--2021-07-12 00:08:22--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.203.128, 74.125.199.128, 74.125.20.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.203.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   179MB/s    in 0.9s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   185MB/s    in 0.9s    \n",
             "\n",
-            "2021-07-09 19:03:49 (179 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2021-07-12 00:08:23 (185 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ],
           "name": "stdout"
@@ -144,7 +144,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bd7a6c74-af0d-496b-93b7-0a73e123b3d1"
+        "outputId": "bee6d4ce-2741-418c-dbe8-0493d82dff22"
       },
       "source": [
         "# How many images in each folder\n",
@@ -204,7 +204,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GBIAJU-i8eIt",
-        "outputId": "e5b6fe0b-8f3f-42d5-ed8a-6cdbdc307549"
+        "outputId": "3efd6c0f-6228-4e81-8e37-87f7dce2f1d1"
       },
       "source": [
         "# Setup data inputs\n",
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AWMEnZ859nmm",
-        "outputId": "382734a5-6563-4dc0-efbd-8037a684a847"
+        "outputId": "922706d6-5f19-4e70-e147-e016f6115a35"
       },
       "source": [
         "len(train_data_10_percent), len(test_data)"
@@ -305,7 +305,7 @@
         "  print(f\"Saving TensorBoard log file to: {log_dir}\")\n",
         "  return tensorboard_callback"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -325,19 +325,11 @@
         "Research paper on which architecture is performing well on different classfication models\n",
         "[https://paperswithcode.com](https://paperswithcode.com/)\n",
         "\n",
-        "https://paperswithcode.com/task/image-classification\n"
+        "https://paperswithcode.com/task/image-classification\n",
+        "\n",
+        "Browsing the TensorFlow Hub page and sorting for image classification, we found the following vector model link : https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1\n",
+        "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "P0pkLqulxujU"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -345,7 +337,18 @@
         "id": "Uz76mHMts6-I"
       },
       "source": [
-        "import tensorflow_hub as hub\n"
+        "import tensorflow_hub as hub"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wORatJCtDNEo"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
